fix: revise CSS for ToC won't collide with docs body on mobile

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -16,11 +16,6 @@
   border-radius: 0 !important;
 }
 
-/* Disable navbar's radius */
-main {
-  padding-top: 0 !important;
-}
-
 pre {
   max-width: 600px;
 }
